--- a/Lv1_Main_Service_Reserve/src/main/webapp/css/style.css
+++ b/Lv1_Main_Service_Reserve/src/main/webapp/css/style.css
@@ -3,6 +3,7 @@
     --primary: #27375C;
     --light: #F0FBFC;
     --dark: #181d38;
+    --white: #fff;
 }
 
 .fw-medium {
@@ -272,7 +273,15 @@
 .service-item:hover * {
     color: var(--light) !important;
 }
-
+/*
+.mb-3{
+	padding:1px;
+	margin: 0 auto;
+	text-align:left;
+	color:#27375C;
+	font-size: 25px;
+}
+*/
 
 /*** Categories & Courses ***/
 .category img,
@@ -420,7 +429,7 @@
 }
 
 .footer .copyright a {
-    color: var(--light);
+    color: var(—light);
 }
 
 .footer .footer-menu a {
@@ -437,3 +446,5 @@
 a.btn btn-primary b1 {
 	width: 128px !important;
 }
+
+/* ================ 추가 css ==================*/
