--- a/Lv2_Personal/src/main/webapp/Content/app3/css/mypage.css
+++ b/Lv2_Personal/src/main/webapp/Content/app3/css/mypage.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 .mintBtn{
+	text-align: center;
 	width:70px;
 	height:25px;
 	background-color: #45c5c5;
@@ -9,7 +10,31 @@
 	font-size: 10px;
 	padding: 5px 7px;;
 }
+.mintBtn_m{
+	text-align: center;
+	width:70px;
+	height:25px;
+	background-color: #45c5c5;
+	color: white;
+	font-weight: bold;
+	border-radius: 5px;
+	font-size: 12px;
+	padding: 5px 7px;;
+}
+.mintBtn_o{
+	text-align: center;
+	width:70px;
+	height:25px;
+	background-color: #FFF;
+	border: 1px solid #45c5c5;
+	color: #45c5c5;
+	font-weight: bold;
+	border-radius: 5px;
+	font-size: 12px;
+	padding: 5px 7px;;
+}
 .shBtn {
+	text-align: center;
 	width:70px;
 	height:25px;
 	color: #fff;
@@ -26,6 +51,7 @@
 	font-weight: 550;
 	color: #45c5c5;
 	padding-bottom: 5px;
+	margin-left: 10px;
 }
 .my_menu a {
 	font-size: 15px;
@@ -58,7 +84,7 @@
 .my_menu2 {
 	color: black;
 	font-size: 12px;
-	margin-left: 10px;
+	margin-left: 20px;
 }
 .my_menu2:hover {
 	cursor: pointer;
@@ -70,7 +96,7 @@
 	font-weight: bold;
 }
 .my-card{
-	height: 280px;
+	height: 256px;
 	margin: 5px;
 	text-align: center;
 	float: left;
