team3_personal 0314 쪽지 상세보기

--- a/Lv2_Personal/src/main/webapp/Content/app3/css/mypage.css
+++ b/Lv2_Personal/src/main/webapp/Content/app3/css/mypage.css
@@ -8,8 +8,20 @@
 	font-weight: bold;
 	border-radius: 5px;
 	font-size: 10px;
-	padding: 5px 7px;;
+	padding: 5px 7px;
 }
+/* .mintBtn:hover{ */
+/* 	text-align: center; */
+/* 	width:70px; */
+/* 	height:25px; */
+/* 	background-color: #FFF; */
+/* 	border-color: #45c5c5; */
+/* 	color: #45c5c5; */
+/* 	font-weight: bold; */
+/* 	border-radius: 5px; */
+/* 	font-size: 10px; */
+/* 	padding: 5px 7px; */
+/* } */
 .mintBtn_m{
 	text-align: center;
 	width:70px;
@@ -21,6 +33,18 @@
 	font-size: 12px;
 	padding: 5px 7px;;
 }
+/* .mintBtn_m:hover{ */
+/* 	text-align: center; */
+/* 	width:70px; */
+/* 	height:25px; */
+/* 	background-color: #FFF; */
+/* 	border-color: #45c5c5; */
+/* 	color: #45c5c5; */
+/* 	font-weight: bold; */
+/* 	border-radius: 5px; */
+/* 	font-size: 10px; */
+/* 	padding: 5px 7px;; */
+/* } */
 .mintBtn_o{
 	text-align: center;
 	width:70px;
@@ -57,10 +81,6 @@
 	font-size: 15px;
 	font-weight: 550;
 	color: #45c5c5;
-}
-.my_menu:hover {
-	cursor: pointer;
-	text-decoration: underline;
 }
 #my_menus {
 	font-size: 17px;
