--- a/Lv2_Personal/src/main/webapp/Content/app3/css/mypage.css
+++ b/Lv2_Personal/src/main/webapp/Content/app3/css/mypage.css
@@ -10,6 +10,17 @@
 	font-size: 10px;
 	padding: 5px 7px;
 }
+.mintBtn a{
+	text-align: center;
+	width:70px;
+	height:25px;
+	background-color: #45c5c5;
+	color: white;
+	font-weight: bold;
+	border-radius: 5px;
+	font-size: 10px;
+	padding: 5px 7px;
+}
 /* .mintBtn:hover{ */
 /* 	text-align: center; */
 /* 	width:70px; */
@@ -31,7 +42,18 @@
 	font-weight: bold;
 	border-radius: 5px;
 	font-size: 12px;
-	padding: 5px 7px;;
+	padding: 3px 0px;
+}
+.mintBtn_m a{
+	text-align: center;
+	width:70px;
+	height:25px;
+	background-color: #45c5c5;
+	color: white;
+	font-weight: bold;
+	border-radius: 5px;
+	font-size: 12px;
+	padding: 5px 7px;
 }
 /* .mintBtn_m:hover{ */
 /* 	text-align: center; */
