--- a/Lv2_Personal/src/main/webapp/Content/app3/css/mypage.css
+++ b/Lv2_Personal/src/main/webapp/Content/app3/css/mypage.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+.presspoint:hover{
+	cursor: pointer
+}
 .mintBtn{
 	text-align: center;
 	width:70px;
@@ -233,7 +236,7 @@
 
 .container .class-box .class-info .information-box {
     width: 690px;
-    padding-top: 10px;
+/*     padding-top: 10px; */
     margin-left: 30px;
 }
 
@@ -397,7 +400,7 @@
     color: #ff005a;
     font-weight: 500;
     text-align: right;
-    padding-right: 120px;
+    padding-right: 20px;
     margin-top: -25px;
 }
 
