--- a/Lv3_Project/src/main/resources/templates/main/header.html
+++ b/Lv3_Project/src/main/resources/templates/main/header.html
@@ -9,7 +9,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear"> 
     <div id="logo" class="fl_left">
-      <h1><a th:href="@{/}">서울/제주 맛집</a></h1>
+      <h1><a th:href="@{/}">세상의 모든 와인</a></h1>
     </div>
     <div class="fl_right">
       <ul class="inline">
@@ -24,34 +24,21 @@
   <nav id="mainav" class="clear"> 
     <ul class="clear">
       <li class="active"><a th:href="@{/}">Home</a></li>
-      <li><a class="drop" href="#">서울맛집</a>
+      <li><a class="drop" href="#">주류</a>
         <ul>
-          <li><a th:href="@{/food/food_find}">맛집 검색</a></li>
+          <li><a th:href="@{/wine/wine_list}">와인</a></li>
+          <li><a th:href="@{/wine/whiskey_list}">위스키</a></li>
+          <li><a th:href="@{/wine/cognac_list}">꼬냑</a></li>
         </ul>
       </li>
-      <li><a class="drop" href="#">제주맛집</a>
+      <li><a th:href="@{/wine/wine_find}">나라별 주류</a></li>
+      <li><a class="drop" href="#">레시피</a>
         <ul>
-          <li><a href="#">제주 맛집</a></li>
-          <li><a href="#">제주 행사</a></li>
-        </ul>
-      </li>
-      <li><a class="drop" href="#">서울여행</a>
-        <ul>
-          <li><a href="#">명소</a></li>
-          <li><a href="#">자연&관광</a></li>
-          <li><a href="#">쇼핑</a></li>
+          <li><a href="#">안주 레시피</a></li>
+          <li><a href="#"></a></li>
         </ul>
       </li>
       <li><a th:href="@{/board/board_list}">커뮤니티</a></li>
-      <li><a class="drop" href="#">Pages</a>
-        <ul>
-          <li><a href="../pages/gallery.html">Gallery</a></li>
-          <li><a href="../pages/full-width.html">Full Width</a></li>
-          <li><a href="../pages/sidebar-left.html">Sidebar Left</a></li>
-          <li><a href="../pages/sidebar-right.html">Sidebar Right</a></li>
-          <li><a href="../pages/basic-grid.html">Basic Grid</a></li>
-        </ul>
-      </li>
     </ul>
   </nav>
 </div>
