--- a/Lv3_Project/src/main/resources/templates/main/home.html
+++ b/Lv3_Project/src/main/resources/templates/main/home.html
@@ -21,29 +21,27 @@
     <ul class="nospace group btmspace-80">
       <li class="one_third first">
         <article class="service"><i class="icon fa fa-ambulance"></i>
-          <h6 class="heading"><a href="#">서울맛집</a></h6>
+          <h6 class="heading"><a href="#">와인</a></h6>
           <p>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urna sit amet.</p>
           <footer><a href="#">Read More &raquo;</a></footer>
         </article>
       </li>
       <li class="one_third">
         <article class="service"><i class="icon fa fa-h-square"></i>
-          <h6 class="heading"><a href="#">제주맛집</a></h6>
+          <h6 class="heading"><a href="#">위스키</a></h6>
           <p>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urna sit amet.</p>
           <footer><a href="#">Read More &raquo;</a></footer>
         </article>
       </li>
       <li class="one_third">
         <article class="service"><i class="icon fa fa-hospital-o"></i>
-          <h6 class="heading"><a href="#">서울여행</a></h6>
+          <h6 class="heading"><a href="#">꼬냑</a></h6>
           <p>Aenean semper elementum tellus, ut placerat leo. Quisque vehicula, urna sit amet.</p>
           <footer><a href="#">Read More &raquo;</a></footer>
         </article>
       </li>
     </ul>
-    <!-- ################################################################################################ -->
 <!--     <h2 class="sectiontitle">믿고보는 맛집 리스트</h2> -->
-<!--     ################################################################################################ -->
 <!--     <div class="flexslider carousel basiccarousel btmspace-80"> -->
 <!--       <ul class="slides"> -->
 <!--         <li th:each="vo:${list}" th:if="${vo.cno>=1 && vo.cno<=12}"> -->
@@ -54,7 +52,6 @@
 <!--       </ul> -->
 <!--     </div> -->
 <!--     <h2 class="sectiontitle">지역별 인기 맛집</h2> -->
-<!--     ################################################################################################ -->
 <!--     <div class="flexslider carousel basiccarousel btmspace-80"> -->
 <!--       <ul class="slides"> -->
 <!--         <li th:each="vo:${list}" th:if="${vo.cno>=13 && vo.cno<=18}"> -->
@@ -65,7 +62,6 @@
 <!--       </ul> -->
 <!--     </div> -->
 <!--     <h2 class="sectiontitle">메뉴별 인기 맛집</h2> -->
-<!--     ################################################################################################ -->
 <!--     <div class="flexslider carousel basiccarousel btmspace-80"> -->
 <!--       <ul class="slides"> -->
 <!--         <li th:each="vo:${list}" th:if="${vo.cno>=19 && vo.cno<=30}"> -->
@@ -75,9 +71,7 @@
 <!--         </li> -->
 <!--       </ul> -->
 <!--     </div> -->
-    <!-- ################################################################################################ -->
     <h2 class="sectiontitle">최근 방문 맛집</h2>
-    <!-- ################################################################################################ -->
     <ul class="nospace group">
       <li class="one_half first">
         <article><img class="imgl radius-10" src="images/demo/100x100.gif" alt="">
@@ -92,8 +86,6 @@
         </article>
       </li>
     </ul>
-    <!-- ################################################################################################ --> 
-    <!-- / main body -->
     <div class="clear"></div>
   </main>
 </div>
