--- a/Lv3_Project/src/main/resources/templates/main.html
+++ b/Lv3_Project/src/main/resources/templates/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-<title>Thymeleaf</title>
+<title>세모와</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -17,8 +17,8 @@
 
 <div class="wrapper row5">
   <div id="copyright" class="clear"> 
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    <p class="fl_left">Copyright &copy; 2023 세상의 모든 와인 - <a href="#">세모와</a></p>
+    <p class="fl_right">개인프로젝트 <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">최선형</a></p>
   </div>
 </div>
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a> 
