--- a/Lv3_Project/src/main/resources/templates/wine/wine_find.html
+++ b/Lv3_Project/src/main/resources/templates/wine/wine_find.html
@@ -11,24 +11,26 @@
       <div id="gallery">
         <figure>
           <header class="heading">
-          	<form method="post" action="/food/food_find" class=inline>
-          		<input type=text name=address size=20 class="input-sm">
+          	<form method="post" action="/wine/wine_find" class=inline>
+          		<input type=text name=nation size=20 class="input-sm">
           		<input type=submit value="검색" class="btn btn-sm">
           	</form>
           </header>
           <ul class="nospace clear">
-            <li th:each="vo,i:${list}" th:class="${i.index%4==0}?'one_quarter first':'one_quarter'"><a th:href="@{/food/find_detail(fno=${vo.fno})}"><img th:src="${vo.poster}" th:title="${vo.name}"></a></li>
+            <li th:each="vo,i:${list}" th:class="${i.index%4==0}?'one_quarter first':'one_quarter'">
+            	<a th:href="@{/food/find_detail(ino=${vo.ino})}"><img th:src="${vo.poster}" th:title="${vo.name}"></a>
+            </li>
           </ul>
           <figcaption></figcaption>
         </figure>
       </div>
       <nav class="pagination">
         <ul>
-          <li th:if="${startpage>1}"><a th:href="@{/food/food_find(page=${startpage-1}, address=${address})}">&laquo; Previous</a></li>
+          <li th:if="${startpage>1}"><a th:href="@{/wine/wine_find(page=${startpage-1}, nation=${nation})}">&laquo; 이전</a></li>
           <li th:class="${curpage==i}?'current':''" th:each="i:${#numbers.sequence(startpage,endpage)}">
-          	<a th:href="@{/food/food_find(page=${i}, address=${address})}" th:text="${i}"></a>
+          	<a th:href="@{/wine/wine_find(page=${i}, nation=${nation})}" th:text="${i}"></a>
           </li>
-          <li th:if="${endpage<totalpage}"><a th:href="@{/food/food_find(page=${endpage+1}, address=${address})}">Next &raquo;</a></li>
+          <li th:if="${endpage<totalpage}"><a th:href="@{/wine/wine_find(page=${endpage+1}, nation=${nation})}">다음 &raquo;</a></li>
         </ul>
       </nav>
     </div>
