--- a/Lv3_Project/src/main/resources/static/layout/styles/framework.css
+++ b/Lv3_Project/src/main/resources/static/layout/styles/framework.css
@@ -48,7 +48,7 @@ h1, h2, h3, h4, h5, h6, .heading{font-family:Georgia, "Times New Roman", Times, 
 --------------------------------------------------------------------------------------------------------------- */
 form, fieldset, legend{margin:0; padding:0; border:none;}
 legend{display:none;}
-label, input, textarea, select, button{display:block; box-sizing:border-box; resize:none; outline:none; color:inherit; font-size:inherit; font-family:inherit; vertical-align:middle;}
+label, textarea, select, button{display:block; box-sizing:border-box; resize:none; outline:none; color:inherit; font-size:inherit; font-family:inherit; vertical-align:middle;}
 label{margin-bottom:5px;}
 
 
