--- a/Lv3_Project/src/main/resources/templates/board/board_detail.html
+++ b/Lv3_Project/src/main/resources/templates/board/board_detail.html
@@ -4,25 +4,33 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<style type="text/css">
+* {
+    font-family: 'GmarketSansMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+</style>
 </head>
 <body>
 <div class="wrapper row3">
   <main class="container clear"> 
   	<table class="table">
       <tr>
-        <td width=20% class="text-center danger">번호</td>
+        <th width=20% class="text-center">번호</th>
         <td width=30% class="text-center" th:text="${vo.no}"></td>
-        <td width=20% class="text-center danger">작성일</td>
+        <th width=20% class="text-center">작성일</th>
         <td width=30% class="text-center" th:text="${vo.regdate}"></td>
       </tr>
       <tr>
-        <td width=20% class="text-center danger">이름</td>
+        <th width=20% class="text-center">이름</th>
         <td width=30% class="text-center" th:text="${vo.name}"></td>
-        <td width=20% class="text-center danger">조회수</td>
+        <th width=20% class="text-center">조회수</th>
         <td width=30% class="text-center" th:text="${vo.hit}"></td>
       </tr>
       <tr>
-        <td width=20% class="text-center danger">제목</td>
+        <th width=20% class="text-center">제목</th>
         <td colspan="3" th:text="${vo.subject}"></td>
       </tr>
       <tr>
@@ -32,9 +40,9 @@
       </tr>
       <tr>
         <td colspan="4" class="text-right">
-          <a th:href="@{/board/board_update(no=${vo.no})}" class="btn btn-xs btn-danger">수정</a>
-          <a th:href="@{/board/board_delete(no=${vo.no})}" class="btn btn-xs btn-info">삭제</a>
-          <a href="/board/board_list" class="btn btn-xs btn-primary">목록</a>
+          <a th:href="@{/board/board_update(no=${vo.no})}" class="shBtn">수정</a>
+          <a th:href="@{/board/board_delete(no=${vo.no})}" class="shBtn">삭제</a>
+          <a href="/board/board_list" class="shBtn_o">목록</a>
         </td>
       </tr>
      </table>
