--- a/Lv3_Project/src/main/resources/templates/board/board_insert.html
+++ b/Lv3_Project/src/main/resources/templates/board/board_insert.html
@@ -4,6 +4,14 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<style type="text/css">
+* {
+    font-family: 'GmarketSansMedium';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+</style>
 </head>
 <body>
 <div class="wrapper row3">
@@ -13,31 +21,31 @@
 	    <tr>
 	      <th width=15% class="text-right">이름</th>
 	      <td width=80%>
-	        <input type=text name=name size=20 class="input-sm">
+	        <input type=text name=name size=100% class="input-sm">
 	      </td>
 	    </tr>
 	    <tr>
 	      <th width=15% class="text-right">제목</th>
 	      <td width=80%>
-	        <input type=text name=subject size=60 class="input-sm">
+	        <input type=text name=subject size=100% class="input-sm">
 	      </td>
 	    </tr>
 	    <tr>
 	      <th width=15% class="text-right">내용</th>
 	      <td width=80%>
-	        <textarea rows="10" cols="60" name="content"></textarea>
+	        <textarea rows="10" cols="99" name="content"></textarea>
 	      </td>
 	    </tr>
 	    <tr>
 	      <th width=15% class="text-right">비밀번호</th>
 	      <td width=80%>
-	        <input type=password name=pwd size=15 class="input-sm">
+	        <input type=password name=pwd size=100% class="input-sm">
 	      </td>
 	    </tr>
 	    <tr>
 	      <td colspan="2" class="text-center">
-	        <input type=submit value="글쓰기" class="btn btn-sm btn-danger">
-	        <input type=button value="취소" class="btn btn-sm btn-danger" onclick="javascript:history.back()">
+	        <input type=submit value="글쓰기" class="shBtn">
+	        <input type=button value="취소" class="shBtn" onclick="javascript:history.back()">
 	      </td>
 	    </tr>
 	    </table>
