개인 0322 thymeleaf 목록,상세,검색

--- a/Lv3_Project/src/main/resources/templates/main/header.html
+++ b/Lv3_Project/src/main/resources/templates/main/header.html
@@ -6,42 +6,45 @@
 </head>
 <body>
 <th:block>
-<div class="wrapper row1">
-  <header id="header" class="clear"> 
-    <div id="logo" class="fl_left">
-      <h1><a th:href="@{/}">세상의 모든 와인</a></h1>
-    </div>
-    <div class="fl_right">
-      <ul class="inline">
-        <li><i class="fa fa-phone"></i> +00 (123) 456 7890</li>
-        <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
-      </ul>
-    </div>
-    
-  </header>
-</div>
-<div class="wrapper row2">
-  <nav id="mainav" class="clear"> 
-    <ul class="clear">
-      <li class="active"><a th:href="@{/}">Home</a></li>
-      <li><a class="drop" href="#">주류</a>
-        <ul>
-          <li><a th:href="@{/wine/wine_list}">와인</a></li>
-          <li><a th:href="@{/wine/whiskey_list}">위스키</a></li>
-          <li><a th:href="@{/wine/cognac_list}">꼬냑</a></li>
-        </ul>
-      </li>
-      <li><a th:href="@{/wine/wine_find}">나라별 주류</a></li>
-      <li><a class="drop" href="#">레시피</a>
-        <ul>
-          <li><a href="#">안주 레시피</a></li>
-          <li><a href="#"></a></li>
-        </ul>
-      </li>
-      <li><a th:href="@{/board/board_list}">커뮤니티</a></li>
-    </ul>
-  </nav>
-</div>
+	<div class="wrapper row1">
+	  <header id="header" class="clear"> 
+	    <div id="logo" class="fl_left">
+	      <a th:href="@{/}">
+	      	<img src="../images/wine.png" style="height: 45px">
+	      </a>
+	    </div>
+	    <div class="inline" style="float: left;margin-left:50px;margin-right:50px;line-height:40px">
+	    	<input type="text" class="input-sm" size=20>
+	    	<input type="submit" class="btn btn-sm" value=검색>
+	    </div>
+		<nav id="mainav" class="inline" style="width:55%;height:0px;float:left"> 
+		    <ul class="clear" style="color:black;font-size:15px">
+		      <li class="active" style="color:white;font-size:12px;font-weight:bold">
+		      	<a th:href="@{/}">Home</a>
+		      </li>
+		      <li><a class="drop" href="#">주류</a>
+		        <ul>
+		          <li><a th:href="@{/wine/wine_list}">와인</a></li>
+		          <li><a th:href="@{/wine/whiskey_list}">위스키</a></li>
+		          <li><a th:href="@{/wine/cognac_list}">꼬냑</a></li>
+		        </ul>
+		      </li>
+		      <li><a th:href="@{/wine/wine_find}">나라별 주류</a></li>
+		      <li><a class="drop" href="#">레시피</a>
+		        <ul>
+		          <li><a href="#">인기 레시피</a></li>
+		          <li><a href="#">이달의 쉐프</a></li>
+		        </ul>
+		      </li>
+		      <li><a th:href="@{/board/board_list}">공지사항</a></li>
+		    </ul>
+		</nav>
+		
+		<div class="inline" style="float:right;margin:10px">
+			<input type=button class="btn btn-sm btn-primary" value="로그인">
+		</div>
+	  </header>
+	</div>
 </th:block>
 </body>
 </html>
