--- a/Lv3_Project/src/main/resources/templates/wine/cognac_list.html
+++ b/Lv3_Project/src/main/resources/templates/wine/cognac_list.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
 <div class="wrapper row3">
