--- a/Lv3_Project/src/main/resources/templates/wine/wine_list.html
+++ b/Lv3_Project/src/main/resources/templates/wine/wine_list.html
@@ -8,6 +8,10 @@
 <body>
 <div class="wrapper row3">
   <main class="container clear"> 
+  	<div class=jumbotron style="background-color: khaki">
+  		<h2 class="text-center" style="font-weight:bold;color:black">와인 리스트</h2>
+  		<h5></h5>
+  	</div>
     <div class="content"> 
       <div id="gallery">
         <figure>
