--- a/Lv3_Project/src/main/resources/static/layout/styles/framework.css
+++ b/Lv3_Project/src/main/resources/static/layout/styles/framework.css
@@ -40,8 +40,8 @@ img{width:auto; max-width:100%; height:auto; margin:0; padding:0; box-sizing:bor
 
 /* Fonts
 --------------------------------------------------------------------------------------------------------------- */
-body, input, textarea, select{font-family:Verdana, Geneva, sans-serif;}
-h1, h2, h3, h4, h5, h6, .heading{font-family:Georgia, "Times New Roman", Times, serif;}
+body, input, textarea, select{font-family:GmarketSansMedium}
+h1, h2, h3, h4, h5, h6, .heading{font-family:GmarketSansMedium;}
 
 
 /* Forms
