--- a/Lv3_Project/src/main/resources/templates/main/header.html
+++ b/Lv3_Project/src/main/resources/templates/main/header.html
@@ -13,11 +13,11 @@
 	      	<img src="../images/wine.png" style="height: 45px">
 	      </a>
 	    </div>
-	    <div class="inline" style="float: left;margin-left:50px;margin-right:50px;line-height:40px">
+	    <div class="inline" style="float: left;margin-left:150px;margin-right:50px;line-height:40px">
 	    	<input type="text" class="input-sm" size=20>
 	    	<input type="submit" class="btn btn-sm" value=검색>
 	    </div>
-		<nav id="mainav" class="inline" style="width:55%;height:0px;float:left"> 
+		<nav id="mainav" class="inline" style="width:55%;height:0px;float:right"> 
 		    <ul class="clear" style="color:black;font-size:15px">
 		      <li class="active" style="color:white;font-size:12px;font-weight:bold">
 		      	<a th:href="@{/}">Home</a>
@@ -39,10 +39,6 @@
 		      <li><a th:href="@{/board/board_list}">공지사항</a></li>
 		    </ul>
 		</nav>
-		
-		<div class="inline" style="float:right;margin:10px">
-			<input type=button class="btn btn-sm btn-primary" value="로그인">
-		</div>
 	  </header>
 	</div>
 </th:block>
