--- a/Lv3_Project/src/main/resources/templates/wine/wine_find.html
+++ b/Lv3_Project/src/main/resources/templates/wine/wine_find.html
@@ -77,7 +77,7 @@
             <div class="sidebar-box ftco-animate">
               <h3 CLASS="heading">최근 본 상품</h3>
               <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(../images/image_1.jpg);"></a>
+                <a class="blog-img mr-4" style="background-image: url(../images/cookie.png);"></a>
                 <div class="text">
                   <h3 class="heading-1"><a href="#"></a></h3>
                 </div>
